# simulative-ml-course

./: pyproject.toml
python-basic/final_project/: .env.example  .gitignore  README.md  compose.yml  config.py  email_notifier.py  google_sheets.py  main.py  state.py
python-basic/final_project/services/: email_notifier.py  google_sheets.py
python-basic/final_project/utils/: logging_setup.py  models.py
